gitops/immich/immich-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec:
      automountServiceAccountToken: true
      containers:
        - name: main
          image: ghcr.io/immich-app/immich-server:v3.2.2
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 2283
            name: http
            protocol: TCP
          - containerPort: 8081
            name: metrics-api
            protocol: TCP
          - containerPort: 8082
            name: metrics-ms
            protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
          - name: config
            mountPath: /config
          - name: data
            mountPath: /data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - name: config
        configMap:
          name: immich-app-config
      - name: data
        persistentVolumeClaim:
          claimName: immich-library-nfs

---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  ports:
  - name: http
    port: 2283
    protocol: TCP
    targetPort: http
  - name: metrics-api
    port: 8081
    protocol: TCP
    targetPort: metrics-api
  - name: metrics-ms
    port: 8082
    protocol: TCP
    targetPort: metrics-ms
