gitops/immich/external-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-mtls-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway-mtls
    namespace: external-gateway
  hostnames:
  - "immich.mtls.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: immich-server
      port: 2283
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /

---
# increase local Rate Limit for Frigate
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: immich-mtls-buc-sh
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 1000
          unit: Minute
