gitops/immich/immich-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tls
  namespace: immich
spec:
  tls:
  - hosts:
      - immich.buc.sh
    secretName: cert-immich-buc-sh
  rules:
  - host: "immich.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              name: http
